Fixing social media on mobile

--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -37,6 +37,6 @@ google_analytics: "UA-XXXXXXXX-X"
 # AUTHOR
 author:
   title: liquidvisual
-  url: http://muchmedia.com.au
+  url: http://liquidvisual.com
   logo: /assets/img/ui/logo-liquidviual.svg
   description: website by liquidvisual
