--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -15,3 +15,4 @@ collections: # A list of collections the CMS should be able to edit # update
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Body, name: content, widget: markdown}
+          - {label: BodyA, name: body, widget: markdown}
