--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -4,9 +4,9 @@ cname: cjhconstructions.com.au
 
 # META
 title: CJH Constructions
-title_homepage: Carpentry Services for Cambelltown and Western Sydney | CJH Constructions
+title_homepage: Construction and Carpentry Services in Campbelltown - Book Today!
 company: CJH Constructions Pty Ltd
-description: CJH Constructions is small team of professionals that work through Cambelltown, Narellan, Camden and Western Sydney. Get a quick quote today.
+description: We specialise in new decks, deck restoration, pergolas, walls and fixings across Campbelltown and Greater Western Sydney. Get a free quote today.
 
 # SITE DEFAULTS
 site_tagline:
