--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -23,7 +23,7 @@ offices:
   - title: Campbelltown
     address: 7 Davy Place, St Helens Park 2560
     phone: 0432 127 272
-    email: chris@cjhconstructions.com.au
+    email: enquiries@cjhconstructions.com.au
 
 # CAMPBELLTOWN SUBURBS
 # https://en.wikipedia.org/wiki/City_of_Campbelltown_(New_South_Wales)
