--- a/src/_data/sitemap.yml
+++ b/src/_data/sitemap.yml
@@ -7,8 +7,8 @@
 - title: Services
   url: '#services'
 
-- title: Gallery
-  url: '#gallery'
+# - title: Gallery
+#   url: '#gallery'
 
 # - title: Case Studies
   # url: /404/
